diljit website practise

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
 <title>Diljit Dosanjh </title>
@@ -6,14 +6,15 @@
 </head>
 <body>
     <h1><i>The Diljit Dosanjh Concert</i></h1>
-    <imgwidth=1100px height=500px src="images/gaanadil.webp"> <P>Gaana Presents - Diljit Dosanjh – India Tour</P><br />
+    <img width=1100px height=500px src="images/gaanadil.webp"> <P>Gaana Presents - Diljit Dosanjh – India Tour</P><br />
     <img height=226px src="images/download%20(1).jpeg">
     <img height=226px width=350px  src="images/download%20(2).jpeg">
     <img height=226px src="images/download.jpeg">
     <img width=260px  height=226px src="images/images%20(1).jpeg">
     <br />
 <audio src="images/Thug%20Life%20Ft%20Ranbir%20-%20Diljit%20Dosanjh%20(DJJOhAL.Com).mp3" controls></audio>
-<video width="650"height="600"src="images/Gulabi%20Pagg%20Diljit%20Dosanjh%20-%20HDYaar.Com%20(1).mp4" controls></video>
+<iframe width="650" height="400" allowfullscreen src="https://www.youtube.com/embed/jE5SdQUN6SY" controls></iframe>
+<!--<video width="650" height="600"src="images/Gulabi%20Pagg%20Diljit%20Dosanjh%20-%20HDYaar.Com%20(1).mp4" controls></video> -->
 <audio src="images/Jind-Mahi-Diljit-Dosanjh.mp3" controls></audio>
     <h1>Ticket Booking</h1>
     <select  name="Seats">
@@ -32,7 +33,7 @@
     <p><b>Leisure Valley Ground, Gurugram</b><br />
     <i>287, NH 8, Sector 29, Gurugram, Haryana 122021</i>
 </p>
-   <footer>&copy; copyright 2019 <br/> Made By Jasmeet Singh</footer> 
+   <footer>&copy; copyright 2019 <br/> Made By Jasmeet Singh </footer> 
 
 </body>
 </html> 
